Added Autos to the factory! Congrats Andy

--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,8 @@
         <li><a class="widget" data-widget="realtime" href="#">What's Being Read</a></li>
         <li><a class="widget" data-widget="localnews" href="#">Local News</a></li>
         <li><a class="widget" data-widget="amber" href="#">Amber Alerts</a></li>
+        <li><a class="widget" data-widget="autos_lifestyle" href="#">AOL Autos - Lifestyle</a></li>
+        <li><a class="widget" data-widget="autos_newcar" href="#">AOL Autos - New Car</a></li>
     </ul>
 </div>
 
@@ -65,14 +67,14 @@
             <h3>Featured Bloggers</h3>
             <p>Featured Bloggers</p>
         </li>
-        <li class="widget" data-widget="slideshow">
+<!--        <li class="widget" data-widget="slideshow">
             <h3>Slideshow</h3>
             <p>Pictures are worth a thousand words - satisfy your users' natural desire to witness breaking, popular photo galleries across our network of sites.</p>
         </li>
         <li class="widget" data-widget="mostwatchedvideos">
             <h3>Most Watched Videos</h3>
             <p>Viral videos are key drivers of visitor engagement. Give your users the best of the web.</p>
-        </li>
+            </li>-->
         <li class="widget" data-widget="realtime">
             <h3>What's Being Read</h3>
             <p>What people are reading right now!!!</p>
@@ -84,6 +86,14 @@
         <li class="widget" data-widget="amber">
             <h3>Amber Alerts</h3>
             <p>Widget that displays current Amber Alerts.</p>
+        </li>
+        <li class="widget" data-widget="autos_lifestyle">
+            <h3>AOL Autos - Lifestyle Research</h3>
+            <p>Description coming soon! Cough, Andy.</p>
+        </li>
+        <li class="widget" data-widget="autos_newcar">
+            <h3>AOL Autos - New Car Research</h3>
+            <p>Description coming soon! Cough, Andy.</p>
         </li>
     </ul>
 </div>
