Removed adsWrapper from factory.

--- a/src/index.html
+++ b/src/index.html
@@ -4,27 +4,13 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title></title>
+  <title>Mighty Module Factory</title>
   <meta name="description" content="">
   <meta name="author" content="Dave Artz">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="../favicon.ico">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
   <link rel="stylesheet" href="css/style.css?v=2">
-  <!-- Advertisement Setup start -->
-
-  <script type="text/javascript" src="http://o.aolcdn.com/ads/adsWrapper.js"></script>
-
-  <script type="text/javascript">
-        <!--
-        adSetTarget('_blank');
-        adSetAdURL('/_uac/adpage.html');
-        //-->
-  </script>
-  <!-- Advertisement Setup end -->
-  <link rel="shortcut icon" type="image/png" href="../favicon.png">
 </head>
 
 <body>
