Updated welcome message for Factory, referencing Trello board.

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,11 @@
 </div>
 
 <div class="factory">
+    <h1>Welcome to Mighty Modules</h1>
+    <p>Our goal is to provide a simple, fast, SEO-friendly platform for widget
+    deployment. Check out our
+    <a href="https://trello.com/board/mighty-modules/4fc7d67b578636997b45e9e7">Trello
+        board</a> to see what we&rsquo;re up to, or paruse our modules below. </p>
     <ul class="widgets">
         <li class="widget" data-widget="mostpopular">
             <h3>Most Popular Stories</h3>
